update api-spec
